AC_INIT([isomd5sum], [1.2.3])
AC_CONFIG_SRCDIR([libcheckisomd5.h])
AC_USE_SYSTEM_EXTENSIONS
AC_SYS_LARGEFILE
AM_INIT_AUTOMAKE([foreign])
AC_CONFIG_MACRO_DIRS([m4])
AM_CONFIG_HEADER(config.h)
AC_LANG_C
AC_PROG_CC
AM_PROG_LIBTOOL
AC_PROG_INSTALL
AC_HEADER_STDC
AC_CHECK_LIB(popt, main, [], [AC_MSG_ERROR(popt required)])
AC_CONFIG_FILES([isomd5sum.pc setup.py])
AC_OUTPUT(Makefile)
